# Miscellaneous

./: .gitignore  README.md  chapter2-text.html  fisica2Ex3.cpp
1Introdução à Computação/: .#notas.py  .gitignore
1Introdução à Computação/ALG/: TRIANGULO.ALG
1Introdução à Computação/aula4/: #escada.c#  cheques.c~  escada  escada.c  hora.c  hora.c~  idade.c  idade.c~  medidas.c~  notas  notas.c  rendimento.c  salario
1Introdução à Computação/aula5/: .#test.c  area.c~  ex2.c
IC1/: .gitignore  CMakeLists.txt
IC1/ALG/: MEDIA.ALG  SALáRIO.ALG  TRIANGULO-MILHAS.ALG  TRIANGULO.ALG
IC1/andrekorol/: .project
IC1/andrekorol/Exercicios-Repeticao-Entrega/: Exercicios-Rep-Nros-Entrega.txt  ex14.c  ex8.c
IC1/andrekorol/Lista String/: ex1.cpp
IC1/andrekorol/Lista-String/: ex1.cpp
IC1/andrekorol/Lista-Vetor-1/ex1/: clear_data.sh  provas.c  provas.sh  test.py
IC1/andrekorol/Lista-Vetor-1/ex2/: 3_ex2.c
IC1/andrekorol/Lista-Vetor-1/ex3/: 3_ex3.c  ex3.txt
IC1/andrekorol/Lista-Vetor-1/ex4/: #ex4.c#  2_ex4.c
IC1/andrekorol/Lista-Vetor-2/ex2/: ex2.c  numeros.txt
IC1/andrekorol/Lista-Vetor-2/ex3/: ex3.c
IC1/andrekorol/Lista-Vetor-2/ex4/: vetor_nao_ordenado.txt  vetor_ordenado.txt
IC1/andrekorol/Lista-Vetor-2/ex5/: 1_vetor.txt  ex5.c
IC1/andrekorol/Lista-Vetor-Entregar/ex1/: ex1.c
IC1/andrekorol/Lista-Vetor-Entregar/ex2/: 1_ex2.c
IC1/andrekorol/aula12/: listing12-1.c
IC1/andrekorol/aula4/: 1_1_.gitignore
IC1/andrekorol/aula5/: 1_ex4.c
IC1/andrekorol/aula6/: dias.c  impar.c  triangulo.c
IC1/andrekorol/aula7/: operacoes.c  switch_operacoes.c
IC1/andrekorol/aula7/if1-exercicios/: 1_par_ou_impar.c  if1-exercicios.kdev4  notas.c
IC1/andrekorol/aula7/if1-exercicios/.kdev4/: 1_if1-exercicios.kdev4
IC1/andrekorol/aula7/if2-exercicios/: .cnh.c.swp  .test.txt.swp  1_CMakeLists.txt  cnh.c  salario.c
IC1/aula4/: 1_medidas.c  2_salario.c
IC1/aula5/: 1_area.c
IC1/treinamento/: fatorial.c  fatorial.py  multiplicacaoMatriz.c
Introdução à Computação/: #notas.py#  MEDIA.ALG  SALáRIO.ALG  TRIANGULO-MILHAS.ALG  fit_empresa  fit_empresa.c  helloworld  helloworld.c  notas.py  notas.py~
Introdução à Computação/aula4/: cheques  cheques.c  escada.c~  hora  idade  medidas  rendimento  rendimento.c~
Introdução à Computação/aula5/: ex3.c~  ex4.c
Introdução à Computação/test/: done.c  done.c~  helloworld.c
Lista-IPD_UERJ/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py
Web Design/: exercicio.html
Web Design/HTML and CSS by Jon Duckett/: chapter2-text.html  first-test.html
c-language/lib/: clear.c
c-primer-plus/: listing1-2.c
c-primer-plus/1/: 1_a.out  listing1-1.c  pe1  pe1.c  pe1.py
c-primer-plus/2/: 1_pe3.c  1_pe5.c  1_pe7.c  1_pe8.c  1_rq4.c  2_a.out  2_pe1.c  a.out  eight-queens.c~  listing2-1.c  pe1.c~  pe2.c  pe2.c~  pe3.c~  pe4.c  pe4.c~  pe5.c~  pe6.c  pe6.c~  pe7.c~  rq4.c~  rq7.c  rq8.c  rq9.c  rq9.c~
c-primer-plus/3/: a.out  altnames.c  altnames.c~  badcount.c  beep.c  beep.c~  cd.txt  cecedilha.c  charcode.c  charcode.c~  escape.c  float_toobig.c  floaterr.c  listing3-1.c  listing3-3.c  pe1.c~  pe2.c  pe2.c~  pe3.c  pe3.c~  pe4.c  pe5.c  pe5.c~  pe6.c  pe6.c~  pe7.c  pe7.c~  pe8.c  pe8.c~  print2.c  rascunho.txt  review_questions.txt  review_questions.txt~  rq10.c  rq10.c~  rq4.c  rq5.c  rq5.c~  rq8.c  showf_pt.c  (+6 more)
c-primer-plus/4/: defines  defines.c  flags  flags.c  floatcnv  floatcnv.c  floats  floats.c  input.c  intconv  intconv.c  longstrg.c  pizza  pizza.c  praise1  praise1.c  praise2  praise2.c  praise2.c~  printout  printout.c  prntval.c  skip2.c  stringf  stringf.c  talkback  talkback.c  talkback.c~  varwid.c  width  width.c
clion/: CMakeLists.txt
code-wars/: test  test.c  test2  test2.c  test2.c~
code-wars/C/: #prof_output#  .#sumTriangularNumbers.c  answerstn.c  evenOrOdd  evenOrOdd.c  evenOrOdd.c~  gmon.out  lucasSumTriang.c  prof_output  sumTriangularNumbers  sumTriangularNumbers.c  sumTriangularNumbers.c~  tdaneven  tdaneven.c
competition/code-forces/: boostTest.cpp  matrix.cpp
cpp-primer-plus/1/: hello  hello.cpp
elixir/: Elixir.Echoer.beam  Elixir.Greeter.beam  echoer.ex  echoer.ex~  greeter.ex  greeter.ex~
emacs/: a.out  float_equals_int.py  float_equals_int.py~  hello_world.c~  listing1-1.c  listing1-1.c~
julia/GPU/: cudevice.jl  cwd.jl  juliaset.jl
julia/sandbox/: script.jl  sinusoid.jl
kr-c/: a.out  cels-to-fahr.c  count_blank_tabs_nl.c  count_for.c  count_lines.c  count_while.c  cp_io_1.c  cp_io_2.c  ex1.6.c  ex1.7.c  fahr-to-celc.c  for-cels-fahr.c  hello.c  replace_blanks.c  replace_tab_backspace.c  symbolic_constant_fahr_celsius.c
lcthw/: ex1  ex1.c
lpthw/mystuff/: #ex33.py#  embraer.py  eng-fatorial.py  ex10.py  ex11.py  ex12.py  ex14.py  ex16-test1.py  ex16.py  ex17.py  ex18.py  ex20-1-teste.py  ex21-1-teste.py  ex21.py  ex26.py  ex29-1-teste.py  ex29-2-teste.py  ex29.py  ex3.py  ex30.py  ex33-1-teste.py  ex33-2-teste.py  ex4.py  ex6.py  fatorial.py  file-ex20.py  fun-code-ex10.py  function-checklist.txt  hey there.py  jogo de perguntas.py  mp4-files.txt  my-test-ex10.py  oldfile.txt  test.py
mit-6.00.1x/: apply_to_each.py  hello-world.py  test-1.py  test-2.py  test-3.py  varA-varB.py
mit-6.00.1x/PyCharm-MIT-600/: Animal.py  Coordinate.py  PyCharm-MIT-600.pyproj  answ-prob2-3.py  applyEachTo.py  biggest.py  bissection-search.py  convert-dec-bin.py  dec-bin-test.py  ex4.py  (+54 more)
mystuff/: 1-script.py  2-script.py  ex1.py  ex14.py  ex15.py  ex16.py  ex19-2-teste.py  ex19-teste.py  ex19.py  ex20.py  ex24.py  ex28.py  ex30-1-teste.py  ex31.py  ex32.py  ex33.py  ex5.py  ex7.py  ex8.py  ex9.py  multiply.py  newfile.txt
perl/: hello_there.pl
python/: argv_test.py  pomodoro.py  pomodoro.py~  test.py  timer.py
racket/: family_tree.rkt
scheme/: hello-world.scm
(+107 files in other folders)
