cmake_minimum_required(VERSION 3.7)
add_executable (ex1 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-Entregar/ex1/ex1.c)
add_executable (switch_operacoes /home/andre/Development/Programming/IC1/andrekorol/aula7/switch_operacoes.c)
add_executable (operacoes /home/andre/Development/Programming/IC1/andrekorol/aula7/operacoes.c)
add_executable (year_test /home/andre/Development/Programming/IC1/andrekorol/aula7/if1-exercicios/year_test.c)
add_executable (1_par_ou_impar /home/andre/Development/Programming/IC1/andrekorol/aula7/if1-exercicios/1_par_ou_impar.c)
add_executable (animais /home/andre/Development/Programming/IC1/andrekorol/aula7/if1-exercicios/animais.c)
add_executable (notas /home/andre/Development/Programming/IC1/andrekorol/aula7/if1-exercicios/notas.c)
add_executable (funcionario /home/andre/Development/Programming/IC1/andrekorol/aula7/if1-exercicios/funcionario.c)
add_executable (salario /home/andre/Development/Programming/IC1/andrekorol/aula7/if2-exercicios/salario.c)
add_executable (cnh /home/andre/Development/Programming/IC1/andrekorol/aula7/if2-exercicios/cnh.c)
add_executable (ex3 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-2/ex3/ex3.c)
add_executable (ex2 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-2/ex2/ex2.c)
add_executable (ex4 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-2/ex4/ex4.c)
add_executable (1_ex1 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-2/ex1/1_ex1.c)
add_executable (ex5 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-2/ex5/ex5.c)
add_executable (listing12-1 /home/andre/Development/Programming/IC1/andrekorol/aula12/listing12-1.c)
add_executable (rendimento /home/andre/Development/Programming/IC1/andrekorol/aula4/rendimento.c)
add_executable (1_salario /home/andre/Development/Programming/IC1/andrekorol/aula4/1_salario.c)
add_executable (medidas /home/andre/Development/Programming/IC1/andrekorol/aula4/medidas.c)
add_executable (idade /home/andre/Development/Programming/IC1/andrekorol/aula4/idade.c)
add_executable (cheques /home/andre/Development/Programming/IC1/andrekorol/aula4/cheques.c)
add_executable (hora /home/andre/Development/Programming/IC1/andrekorol/aula4/hora.c)
add_executable (escada /home/andre/Development/Programming/IC1/andrekorol/aula4/escada.c)
add_executable (1_notas /home/andre/Development/Programming/IC1/andrekorol/aula4/1_notas.c)
add_executable (ex23 /home/andre/Development/Programming/IC1/andrekorol/Exercicios-Repeticao-Entrega/ex23.c)
add_executable (ex14 /home/andre/Development/Programming/IC1/andrekorol/Exercicios-Repeticao-Entrega/ex14.c)
add_executable (ex8 /home/andre/Development/Programming/IC1/andrekorol/Exercicios-Repeticao-Entrega/ex8.c)
add_executable (1_ex2 /home/andre/Development/Programming/IC1/andrekorol/Exercicios-Repeticao-Entrega/1_ex2.c)
add_executable (1_ex3 /home/andre/Development/Programming/IC1/andrekorol/Exercicios-Repeticao-Entrega/1_ex3.c)
add_executable (area /home/andre/Development/Programming/IC1/andrekorol/aula5/area.c)
add_executable (2_ex3 /home/andre/Development/Programming/IC1/andrekorol/aula5/2_ex3.c)
add_executable (2_ex2 /home/andre/Development/Programming/IC1/andrekorol/aula5/2_ex2.c)
add_executable (1_ex4 /home/andre/Development/Programming/IC1/andrekorol/aula5/1_ex4.c)
add_executable (ordenacao /home/andre/Development/Programming/IC1/andrekorol/aula6/ordenacao.c)
add_executable (bissexto /home/andre/Development/Programming/IC1/andrekorol/aula6/bissexto.c)
add_executable (impar /home/andre/Development/Programming/IC1/andrekorol/aula6/impar.c)
add_executable (dias /home/andre/Development/Programming/IC1/andrekorol/aula6/dias.c)
add_executable (triangulo /home/andre/Development/Programming/IC1/andrekorol/aula6/triangulo.c)
add_executable (bissexto-prof /home/andre/Development/Programming/IC1/andrekorol/aula6/bissexto-prof.c)
add_executable (3_ex3 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-1/ex3/3_ex3.c)
add_executable (3_ex2 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-1/ex2/3_ex2.c)
add_executable (2_ex4 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-1/ex4/2_ex4.c)
add_executable (provas /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-1/ex1/provas.c)
add_executable (1_ex5 /home/andre/Development/Programming/IC1/andrekorol/Lista-Vetor-1/ex5/1_ex5.c)
add_executable (feature_tests /home/andre/Development/Programming/IC1/cmake-build-debug/CMakeFiles/feature_tests.c)
add_executable (CMakeCCompilerId /home/andre/Development/Programming/IC1/cmake-build-debug/CMakeFiles/3.7.2/CompilerIdC/CMakeCCompilerId.c)
add_executable (1_escada /home/andre/Development/Programming/IC1/aula4/1_escada.c)
add_executable (1_idade /home/andre/Development/Programming/IC1/aula4/1_idade.c)
add_executable (1_rendimento /home/andre/Development/Programming/IC1/aula4/1_rendimento.c)
add_executable (1_hora /home/andre/Development/Programming/IC1/aula4/1_hora.c)
add_executable (2_notas /home/andre/Development/Programming/IC1/aula4/2_notas.c)
add_executable (1_medidas /home/andre/Development/Programming/IC1/aula4/1_medidas.c)
add_executable (2_salario /home/andre/Development/Programming/IC1/aula4/2_salario.c)
add_executable (1_cheques /home/andre/Development/Programming/IC1/aula4/1_cheques.c)
add_executable (3_ex4 /home/andre/Development/Programming/IC1/aula5/3_ex4.c)
add_executable (4_ex2 /home/andre/Development/Programming/IC1/aula5/4_ex2.c)
add_executable (1_area /home/andre/Development/Programming/IC1/aula5/1_area.c)
add_executable (4_ex3 /home/andre/Development/Programming/IC1/aula5/4_ex3.c)
